<resources>
    <string name="app_name">Абак</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_mul">*</string>
    <string name="key_div">/</string>
    <string name="key_eq">=</string>
    <string name="key_c">CE</string>
    <string name="dot_is_pressed">Точка уже была нажата!</string>
    <string name="ARG_HISTORY">ARG_HISTORY</string>
    <string name="ARG_1">ARG_1</string>
    <string name="ARG_2">ARG_2</string>
    <string name="ARG_DIV">ARG_DIV</string>
    <string name="ARG_DOT">ARG_DOT</string>
    <string name="ARG_OPER">ARG_OPER</string>
    <string name="text_settings">Настройки</string>
    <string name="theme_1">Тема1</string>
    <string name="theme_2">Тема2</string>
    <string name="ok_button">Применить</string>

</resources>